package com.eugene7997.nanourl;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class NanourlApplication {

	public static void main(String[] args) {
		SpringApplication.run(NanourlApplication.class, args);
	}

}
